# ml-sales-eda-regression

./: .dvcignore  .gitignore  Makefile  README copy.md  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  drift-monitor.yml
libs/ml_core/src/ml_core/data/: contracts.py  guards.py  splitters.py
libs/ml_core/src/ml_core/features/: preprocessor.py  schema.py
libs/ml_core/src/ml_core/modeling/: contracts.py  metrics.py  trainer.py
libs/ml_core/src/ml_core/monitoring/: __init__.py  calibration.py  conformal.py  distributions.py  drift.py  drift_report.py  eda.py  explainability.py  latency.py  schema_alert.py
libs/ml_core/src/ml_core/registry/: artifacts.py  metadata.py  onnx_export.py  versioning.py
libs/ml_core/src/ml_core/serving/: app_factory.py
libs/ml_core/src/ml_core/validation/: __init__.py  pandera_gate.py
libs/ml_core/tests/: test_cross_project_inference_contracts.py  test_drift_report.py  test_eda.py  test_explainability.py  test_guards_and_serving.py  test_model_selection_modes.py  test_monitoring.py  test_registry_versioning.py  test_schema.py  test_shadow_serving.py  test_train_only_preprocessing.py  test_trainer_registry.py  test_uncertainty_intervals.py  test_validation_gate.py
projects/california_housing_template/: NOTE.md  README.md
projects/california_housing_template/src/california_housing_template/: api.py  config.py  data.py  eda.py  predict.py  train.py
projects/california_housing_template/tests/: test_california_api.py  test_california_api_unavailable.py  test_california_eda.py  test_california_loader.py  test_california_predict.py  test_california_predict_validation.py  test_california_registry_integration.py  test_california_training.py
projects/sales_forecasting_regression/: README.md  dvc.yaml
projects/sales_forecasting_regression/src/sales_forecasting_regression/: api.py  config.py  data.py  data_layer.py  eda.py  predict.py  time_series.py  tracking.py  train.py
projects/sales_forecasting_regression/tests/: test_sales_api.py  test_sales_api_unavailable.py  test_sales_data_layer.py  test_sales_data_loader.py  test_sales_eda.py  test_sales_predict.py  test_sales_predict_validation.py  test_sales_registry_integration.py  test_sales_time_series.py  test_sales_tracking.py  test_sales_training.py
scripts/eda/: generate_eda_report.py
scripts/loadtest/: locustfile_california.py  locustfile_sales.py  run_loadtest.py
scripts/monitoring/: daily_drift_monitor.py
scripts/quality/: generate_quality_report.py
scripts/registry/: manage_registry.py
v1/: v1.gitignore
v2/: .dockerignore  Dockerfile.api  README.md  config_v2.yaml  docker-compose.yml  dvc.yaml  requirements.txt  v2.gitignore
v2/src/: __init__.py  api_sales_v2.py  config_v2.py  data_parquet.py  duckdb_utils.py  eda_polars_duckdb.py  logging_utils.py  predict_sales.py  train_sales_regression_mlflow.py
