[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-platform-sales-housing"
version = "1.0.0"
description = "Monorepo ML platform with shared core, sales forecasting flagship, and California housing reference template"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Evan" }]
dependencies = [
  "fastapi>=0.111",
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "pandera[pandas]>=0.20",
  "pydantic>=2.7",
  "scikit-learn>=1.4",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "locust>=2.31",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
mlops = [
  "arch>=7.0",
  "dvc>=3.50",
  "duckdb>=1.1",
  "evidently>=0.4",
  "matplotlib>=3.8",
  "mlflow>=2.15",
  "onnx>=1.16",
  "polars>=1.9",
  "shap>=0.46",
  "skl2onnx>=1.17",
  "statsmodels>=0.14",
]

[project.scripts]
sales-train = "sales_forecasting_regression.train:main"
sales-predict = "sales_forecasting_regression.predict:main"
sales-data-layer = "sales_forecasting_regression.data_layer:main"
sales-time-series = "sales_forecasting_regression.time_series:main"
california-train = "california_housing_template.train:main"
california-predict = "california_housing_template.predict:main"

[tool.setuptools.packages.find]
where = [
  "libs/ml_core/src",
  "projects/sales_forecasting_regression/src",
  "projects/california_housing_template/src",
]
include = [
  "ml_core*",
  "sales_forecasting_regression*",
  "california_housing_template*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "libs/ml_core/tests",
  "projects/sales_forecasting_regression/tests",
  "projects/california_housing_template/tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"scripts/quality/generate_quality_report.py" = ["E402"]
"scripts/monitoring/daily_drift_monitor.py" = ["E402"]
"scripts/eda/generate_eda_report.py" = ["E402"]
